deployment/test.yml
apiVersion : v1
kind: Pod
metadata:
  name: test
  labels:
      env : test
      app : hernia
      tier: app
spec:
  containers:
    - name : frontend
      image: evgengolik/learnk8s:2
      ports: 
        - containerPort: 3000
    
    - name: backend
      image: evgengolik/learnk8s:1
      ports:
        - containerPort: 3001
