deployment/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: localhost
    http: 
      paths:
       - backend:
           serviceName: test-service
           servicePort: 8081
