deployment/testDeploy.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: test-deploy
  labels:
    app : test
    env : test
    tier: app
spec:
  replicas: 3
  selector:
    matchLabels:
      project: test
  template:
    metadata:
      labels:
        project: test
    spec:
      containers:
        - name : fe
          image: evgengolik/learnk8s:2
          ports:
            - containerPort: 3000

        - name : be
          image: evgengolik/learnk8s:1
          ports:
            - containerPort: 3001

---
apiVersion: v1
kind: Service
metadata:
  name: test-service
  labels:
    env: test
spec:
  selector:
    project: test
  ports:
    - name    : fe-listener
      protocol: TCP
      port    : 8081
      targetPort: 3000
  type: NodePort

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: localhost
    http: 
      paths:
       - backend:
           serviceName: test-service
           servicePort: 8081
